--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,7 @@
 {
-	"name": "hello-webpack",
+	"name": "cross-pwgame-client",
+	"version": "1.0.0",
+	"author": "Pierre Hérissé",
 	"devDependencies": {
 		"@babel/core": "^7.8.7",
 		"@babel/preset-env": "^7.8.7",
