--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "cross-pwgame-client",
+	"license": "MIT",
 	"version": "1.0.0",
 	"author": "Pierre Hérissé",
 	"devDependencies": {
@@ -8,18 +9,22 @@
 		"@babel/preset-react": "^7.8.3",
 		"babel-loader": "^8.0.6",
 		"html-loader": "^0.5.5",
-		"html-webpack-plugin": "^3.2.0",
+		"html-webpack-plugin": "^4.0.0-beta.11",
 		"webpack": "^4.42.0",
 		"webpack-cli": "^3.3.11",
 		"webpack-dev-server": "^3.10.3"
 	},
 	"scripts": {
 		"dev": "webpack-dev-server --open --mode development",
-		"build": "webpack --mode production"
+		"build": "webpack --mode production",
+		"prod": "webpack-prod-server --open --mode production"
 	},
 	"dependencies": {
 		"react": "^16.13.0",
+		"react-dev-utils": "^10.2.0",
 		"react-dom": "^16.13.0",
-		"socket.io-client": "^2.3.0"
+		"react-scripts": "^3.4.0",
+		"socket.io-client": "^2.3.0",
+		"webpack-prod-server": "^1.1.1"
 	}
 }
