--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,13 @@
 	"author": "Pierre Hérissé",
 	"license": "MIT",
 	"scripts": {
-		"dev": "yarn nodemon src/server"
+		"dev": "yarn nodemon"
 	},
 	"dependencies": {
 		"@types/socket.io": "^2.1.4",
 		"express": "^4.17.1",
+		"kill-port": "^1.6.0",
+		"nodemon": "^2.0.2",
 		"socket.io": "^2.3.0",
 		"ts-node": "^8.6.2"
 	},
@@ -20,7 +22,6 @@
 		"@babel/preset-typescript": "^7.8.3",
 		"@types/express": "^4.17.3",
 		"dotenv": "^8.2.0",
-		"nodemon": "^2.0.2",
 		"typescript": "^3.8.3"
 	}
 }
