--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,33 @@
 {
-	"name": "cross-pwgame-server",
-	"version": "1.0.0",
-	"main": "index.js",
-	"author": "Pierre Hérissé",
-	"license": "MIT",
-	"scripts": {
-		"dev": "yarn nodemon"
-	},
-	"dependencies": {
-		"@types/socket.io": "^2.1.4",
-		"express": "^4.17.1",
-		"kill-port": "^1.6.0",
-		"nodemon": "^2.0.2",
-		"socket.io": "^2.3.0",
-		"ts-node": "^8.6.2"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.8.7",
-		"@babel/node": "^7.8.7",
-		"@babel/preset-env": "^7.8.7",
-		"@babel/preset-typescript": "^7.8.3",
-		"@types/express": "^4.17.3",
-		"dotenv": "^8.2.0",
-		"typescript": "^3.8.3"
-	}
+  "name": "server",
+  "version": "1.0.0",
+  "main": "src/main.ts",
+  "type": "types.d.ts",
+  "license": "MIT",
+  "scripts": {
+    "dev": "yarn nodemon",
+    "check": "yarn tsc",
+    "lint": "yarn eslint 'src/**/*.ts'"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/node": "^7.8.7",
+    "@mhirba/babel-preset-next": "^1.3.0",
+    "@mhirba/eslint-config-base": "^2.0.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.3",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^13.9.1",
+    "@types/socket.io": "^2.1.4",
+    "husky": "^4.2.3",
+    "nodemon": "^2.0.2",
+    "typescript": "^3.8.3"
+  }
 }
