--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "lint": "yarn eslint 'src/**/*.ts' --fix"
   },
   "dependencies": {
+    "chalk": "^3.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
